# ros2_rust

examples/minimal_pub_sub/: Cargo.toml  README.md  package.xml
examples/minimal_pub_sub/src/: minimal_publisher.rs  minimal_subscriber.rs
