[package]
name = "examples_rclrs_minimal_pub_sub"
version = "0.3.1"
# This project is not military-sponsored, Jacob's employment contract just requires him to use this email address
authors = [
    "Esteve Fernandez <esteve@apache.org>",
    "Nikolai Morin <nnmmgit@gmail.com>",
    "Jacob Hassold <jacob.a.hassold.civ@army.mil>",
]
edition = "2021"

[[bin]]
name = "minimal_subscriber"
path = "src/minimal_subscriber.rs"

[[bin]]
name = "minimal_publisher"
path = "src/minimal_publisher.rs"

[[bin]]
name = "zero_copy_subscriber"
path = "src/zero_copy_subscriber.rs"

[[bin]]
name = "zero_copy_publisher"
path = "src/zero_copy_publisher.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
rand = "0.8.5"
uhlc = "0.5.1"
bytemuck = "1.12"
csv = "1.1.6"
rosidl_runtime_rs = "*"
# std_msgs = "*"
[dependencies.rclrs]
version = "*"

[dependencies.std_msgs]
version = "*"
